[gd_scene load_steps=11 format=2]

[ext_resource path="res://world_map/level entries/spot.png" type="Texture" id=1]
[ext_resource path="res://misc icons/trophyicon.tscn" type="PackedScene" id=2]
[ext_resource path="res://world_map/level entries/loadlevel_woods2.gd" type="Script" id=3]
[ext_resource path="res://cabin-hub/cabin_theme_box_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://font/mainfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://cabin-hub/cabin_theme.tres" type="Theme" id=6]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.07983
height = 6.99431

[sub_resource type="InputEventAction" id=2]

device = 0
action = "ui_accept"
pressed = false

[sub_resource type="ShortCut" id=3]

shortcut = SubResource( 2 )

[node name="Entry Point" type="Node2D"]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="trophy" parent="." index="1" instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="." index="2"]

scale = Vector2( 4, 4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 0, 0.376034 )
rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Desc" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Desc" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -62.0
margin_top = 28.0
margin_right = 64.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Vine Grotto 1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts", "custom_styles" ]

[node name="Button" type="Button" parent="Desc" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -57.0
margin_top = 52.0
margin_right = 61.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 3 )
group = null
text = "Thorny Tunnel"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Ding" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 7 )
volume_db = -9.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_Area2D_area_exited"]

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]

[connection signal="button_down" from="Desc/Button" to="Area2D" method="_on_Button_button_down"]

[connection signal="finished" from="Ding" to="Area2D" method="_on_AudioStreamPlayer_finished"]


